--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+.button {
+  background: var(--color-blue);
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  border-radius: var(--radius);
+  font-weight: 200;
+}
+
 :root {
   --color-background: #6a357b;
   --color-white: #ffffff;
@@ -49,6 +57,10 @@ h3 {
 }
 .subline {
   font-family: 'Balsamiq Sans', sans-serif;
+  font-size: 0.9rem;
+  svg {
+    vertical-align: middle;
+  }
 }
 a {
   color: inherit;
@@ -94,6 +106,11 @@ nav ul {
   justify-content: center;
   text-align: center;
   margin: 5rem auto;
+  hgroup {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
 }
 main {
   max-width: 62rem;
@@ -131,4 +148,12 @@ main {
 }
 .iconInstruction {
   min-width: 125px;
+}
+.tm_smaller {
+  opacity: 0.51;
+  font-size: 0.625rem;
+  display: inline-block;
+  position: relative;
+  top: -5px;
+  left: 2px;
 }
