--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,7 +1,9 @@
-.button {
+.buttonBlue {
   background: var(--color-blue);
   text-decoration: none;
-  padding: 0.5rem 1rem;
-  border-radius: var(--radius);
-  font-weight: 200;
+  border-radius: 0.5rem;
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  font-weight: 700;
+  transition: all 0.2s;
 }
